--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -506,3 +506,7 @@ CONFIG_DEBUG_LIST=n
 # CONFIG_PRINTK_MT_PREFIX is not set
 CONFIG_CLEANCACHE=y
 CONFIG_SCHED_WALT=y
+CONFIG_NETFILTER_XT_TARGET_HMARK=y
+CONFIG_IP_NF_TARGET_TTL=y
+CONFIG_IP6_NF_MATCH_HL=y
+CONFIG_IP6_NF_TARGET_HL=y
