--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -484,3 +484,7 @@ CONFIG_THIN_ARCHIVES=y
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
+CONFIG_PAGE_OWNER=n
+CONFIG_PAGE_EXTENSION=n
+CONFIG_DEBUG_LIST=n
+# CONFIG_PRINTK_MT_PREFIX is not set
