--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -1,5 +1,5 @@
 CONFIG_LOCALVERSION_AUTO=y
-CONFIG_LOCALVERSION="-D.A.L_V_Liella!"
+CONFIG_LOCALVERSION="-Atomic!"
 # CONFIG_FHANDLE is not set
 CONFIG_IKHEADERS=y
 CONFIG_LOG_BUF_SHIFT=17
@@ -8,16 +8,14 @@ CONFIG_UCLAMP_GROUPS_COUNT=32
 CONFIG_UCLAMP_MAP_OPP=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_CPUSETS=y
-CONFIG_CGROUP_DEBUG=y
+# CONFIG_CGROUP_DEBUG is not set
 CONFIG_SCHED_TUNE=y
-CONFIG_DEFAULT_USE_ENERGY_AWARE=n
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 CONFIG_SYSCTL_SYSCALL=y
-CONFIG_TARGET_PRODUCT_MERLINCOMMON=y
 # CONFIG_KALLSYMS_BASE_RELATIVE is not set
 # CONFIG_SLUB_CPU_PARTIAL is not set
 # CONFIG_SLUB_DEBUG is not set
@@ -31,11 +29,7 @@ CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
 CONFIG_LITTLE_CPU_MASK=63
 CONFIG_BIG_CPU_MASK=192
-CONFIG_BIG_CPU_FIRST_MASK=64
-CONFIG_BIG_CPU_SECOND_MASK=128
 CONFIG_PREEMPT=y
-CONFIG_HZ_300=y
-CONFIG_HZ=300
 # CONFIG_BOUNCE is not set
 CONFIG_ZSMALLOC=y
 CONFIG_RANDOMIZE_BASE=y
@@ -44,11 +38,16 @@ CONFIG_CMDLINE="console=tty0 console=ttyMT3,921600n1 root=/dev/ram vmalloc=496M 
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE=y
 CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6768"
+CONFIG_TARGET_PRODUCT_MERLINCOMMON=y
 CONFIG_BUILD_ARM64_DTB_OVERLAY_IMAGE_NAMES="mediatek/merlin"
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_COMPAT=y
 CONFIG_COMPAT_VDSO=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+
+
+
+# CPU Freq Scaling
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_MTK=y
@@ -56,6 +55,8 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+
+# TCP
 CONFIG_XFRM_MIGRATE=y
 CONFIG_SYN_COOKIES=y
 CONFIG_TCP_CONG_WESTWOOD=y
@@ -70,6 +71,7 @@ CONFIG_TCP_CONG_YEAH=y
 CONFIG_TCP_CONG_ILLINOIS=y
 CONFIG_TCP_CONG_DCTCP=y
 CONFIG_TCP_CONG_CDG=y
+CONFIG_TCP_CONG_BBR=y
 CONFIG_BRIDGE=y
 CONFIG_VLAN_8021Q=y
 CONFIG_CLS_U32_PERF=y
@@ -77,16 +79,23 @@ CONFIG_CLS_U32_MARK=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
 # CONFIG_CFG80211_INTERNAL_REGDB is not set
+
+
+
+# ZRAM
 CONFIG_ZRAM=y
 CONFIG_ZRAM_SIZE_OVERRIDE=3
 CONFIG_ZRAM_DEDUP=y
 CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
+
+
+
+# Others
 CONFIG_MEDIATEK_SOLUTION=y
 CONFIG_MTK_PLATFORM="mt6768"
 CONFIG_ARCH_MTK_PROJECT="k69v1_64"
 #CONFIG_MTK_AB_OTA_UPDATER is not set
 CONFIG_MTK_GPT_SCHEME_SUPPORT=y
-CONFIG_MTK_IO_BOOST=y
 CONFIG_MTK_PMIC_NEW_ARCH=y
 CONFIG_MTK_PMIC_COMMON=y
 CONFIG_MTK_PMIC_CHIP_MT6358=y
@@ -128,6 +137,7 @@ CONFIG_MTK_LCM_PHYSICAL_ROTATION="0"
 CONFIG_LCM_HEIGHT="2340"
 CONFIG_LCM_WIDTH="1080"
 CONFIG_MTK_AAL_SUPPORT=y
+CONFIG_MTK_DYNAMIC_FPS_FRAMEWORK_SUPPORT=y
 CONFIG_MTK_CCU=y
 CONFIG_MTK_SENSOR_SUPPORT=y
 CONFIG_MTK_SENSOR_ARCHITECTURE="1.0"
@@ -198,12 +208,6 @@ CONFIG_MTK_LENS_DW9714VAF_SUPPORT=y
 CONFIG_MTK_PWM=y
 CONFIG_MTK_CHIP=y
 CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT=y
-CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
-# CONFIG_SCHED_HMP is not set
-# CONFIG_MTK_SCHED_BOOST is not set
-# CONFIG_MTK_SCHED_RQAVG_KS is not set
-# CONFIG_MTK_SCHED_RQAVG_US is not set
-# CONFIG_MTK_SCHED_CPULOAD is not set
 CONFIG_USB_MTK_HDRC=y
 CONFIG_MTK_MUSB_QMU_SUPPORT=y
 CONFIG_MTK_MUSB_QMU_PURE_ZLP_SUPPORT=y
@@ -214,7 +218,6 @@ CONFIG_MTK_RAM_CONSOLE=y
 CONFIG_CONSOLE_LOGLEVEL_DEFAULT=4
 CONFIG_MTK_RTC=y
 #CONFIG_MTK_USB_TYPEC_U3_MUX is not set
-CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
 CONFIG_TCPC_CLASS=y
 #CONFIG_USB_POWER_DELIVERY is not set
 #CONFIG_TCPC_MT6370 is not set
@@ -222,10 +225,6 @@ CONFIG_TCPC_WUSB3801=y
 # CONFIG_MTK_LOAD_TRACKER is not set
 # CONFIG_MTK_CPU_CTRL_CFP is not set
 # CONFIG_MTK_PERF_OBSERVER is not set
-CONFIG_MTK_RESYM=y
-CONFIG_MTK_FPSGO_V3=y
-CONFIG_MTK_EARA_THERMAL=y
-# CONFIG_MTK_PERF_TRACKER is not set
 CONFIG_MTK_LOWMEM_HINT=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
 CONFIG_MTK_ANDROID_DEFAULT_SETTING=y
@@ -495,13 +494,73 @@ CONFIG_THIN_ARCHIVES=y
 CONFIG_WIREGUARD=y
 # CONFIG_WIREGUARD_DEBUG is not set
 
-CONFIG_PAGE_OWNER=n
-CONFIG_PAGE_EXTENSION=n
-CONFIG_DEBUG_LIST=n
 # CONFIG_PRINTK_MT_PREFIX is not set
-CONFIG_CLEANCACHE=y
-CONFIG_SCHED_WALT=y
 CONFIG_NETFILTER_XT_TARGET_HMARK=y
 CONFIG_IP_NF_TARGET_TTL=y
 CONFIG_IP6_NF_MATCH_HL=y
 CONFIG_IP6_NF_TARGET_HL=y
+
+
+# MTK Energy Aware Scheduler Plus
+CONFIG_MTK_SCHED_EAS_POWER_SUPPORT=y
+
+
+# Energy Aware Scheduler
+CONFIG_DEFAULT_USE_ENERGY_AWARE=n
+
+
+# MTK Heterogenous MultiProcessor Scheduler
+CONFIG_SCHED_HMP=y
+CONFIG_SCHED_HMP_PLUS=y
+CONFIG_MTK_SCHED_BOOST=y
+# CONFIG_MTK_SCHED_RQAVG_KS is not set
+# CONFIG_MTK_SCHED_RQAVG_US is not set
+# CONFIG_MTK_SCHED_CPULOAD is not set
+
+
+# MTK load balance and schedule enhancement
+# CONFIG_MTK_IDLE_BALANCE_ENHANCEMENT is not set
+# CONFIG_MTK_SCHED_INTEROP is not set
+# CONFIG_MTK_SCHED_TRACE is not set
+# CONFIG_MTK_SCHED_SYSHINT is not set
+
+
+# MTK PERFORMANCE Configs
+CONFIG_MTK_PERFMGR_TOUCH_BOOST=y
+CONFIG_MTK_RESYM=y
+CONFIG_MTK_FPSGO_V3=y
+CONFIG_MTK_EARA_THERMAL=n
+CONFIG_MTK_GBE=y
+
+
+# Misc
+# CONFIG_MTK_PERF_TRACKER is not set
+# CONFIG_SCHED_DEBUG is not set
+# CONFIG_SLUB_CPU_PARTIAL is not set
+CONFIG_PELT_UTIL_HALFLIFE_16=y
+CONFIG_PAGE_OWNER=n
+CONFIG_PAGE_EXTENSION=n
+CONFIG_DEBUG_LIST=n
+CONFIG_MTK_IO_BOOST=y
+#CONFIG_FRANDOM is not set
+CONFIG_CLEANCACHE=y
+CONFIG_SCHED_WALT=n
+
+# IO
+CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_IOSCHED_DEADLINE=y
+
+
+# Kernel ticker
+CONFIG_HZ_250=y
+CONFIG_HZ=250
+
+# Timers subsystem
+CONFIG_TICK_ONESHOT=y
+CONFIG_NO_HZ_COMMON=y
+# CONFIG_HZ_PERIODIC is not set
+CONFIG_NO_HZ_IDLE=y
+# CONFIG_NO_HZ_FULL is not set
+CONFIG_NO_HZ=y
+CONFIG_HIGH_RES_TIMERS=y
+
