--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -58,7 +58,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 
 # TCP
 CONFIG_XFRM_MIGRATE=y
-CONFIG_SYN_COOKIES=y
+# CONFIG_SYN_COOKIES is not set
 CONFIG_TCP_CONG_WESTWOOD=y
 CONFIG_TCP_CONG_HTCP=y
 CONFIG_TCP_CONG_HSTCP=y
