--- a/arch/arm64/configs/merlin_defconfig
+++ b/arch/arm64/configs/merlin_defconfig
@@ -55,6 +55,9 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT=1000
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT=1000
+
 
 # TCP
 CONFIG_XFRM_MIGRATE=y
@@ -542,7 +545,6 @@ CONFIG_PAGE_OWNER=n
 CONFIG_PAGE_EXTENSION=n
 CONFIG_DEBUG_LIST=n
 CONFIG_MTK_IO_BOOST=y
-#CONFIG_FRANDOM is not set
 CONFIG_CLEANCACHE=y
 CONFIG_SCHED_WALT=n
 
@@ -564,3 +566,6 @@ CONFIG_NO_HZ_IDLE=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 
+CONFIG_HAVE_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER=y
+CONFIG_ANDROID_LOW_MEMORY_KILLER_AUTODETECT_OOM_ADJ_VALUES=y
